# scope-load-testing

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.harness  README.md  docker-compose.yml  pyproject.toml
.claude/skills/: enrich-datasets.md
config/: default.yaml
config/datasets/: manifest.yaml
config/graphs/: chain_depth_longlive_rife.yaml  chain_longlive_rife.yaml
config/prompts/: abstract.yaml  animals.yaml  fantasy.yaml  food.yaml  motion.yaml  nature.yaml  people.yaml  scifi.yaml  stress.yaml  urban.yaml  weather.yaml
dashboards/grafana/: scope-loadtest.json
docs/: design.md  docker-optimization-plan.md
docs/plans/: 2026-05-06-load-testing-harness.md  2026-06-05-metrics-reporting.md
scripts/: check_datasets.py  generate_reference_images.py  generate_test_videos.py  generate_video_clips.py  run_sdk_e2e.py  run_sdk_v2v_e2e.py
src/loadtest/: __init__.py  cli.py  config.py  coverage.py  datasets.py  discovery.py  executor.py  metrics.py  metrics_reporter.py  regression.py  results.py  scenarios.py  scheduler.py  scope_client.py  sdk_client.py  sdk_executor.py  trickle_reader.py  validators.py
tests/: test_cli.py  test_config.py  test_coverage.py  test_datasets.py  test_discovery.py  test_e2e_metrics.py  test_executor.py  test_metrics.py  test_metrics_reporter.py  test_regression.py  test_results.py  test_scenarios.py  test_scheduler.py  test_scope_client.py  test_validators.py
